--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 
 <head>
     <title>Manjog | AR VR Developer</title>
-    <meta name="description" content="H-Code - A premium portfolio template from ThemeZaa">
+    <meta name="description" content="Resume Portfolio from Manjog Singh">
     <meta name="keywords" content="">
     <meta charset="utf-8">
-    <meta name="author" content="ThemeZaa">
+    <meta name="author" content="Manjog Singh">
     <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1" />
     <!-- favicon -->
-    <link rel="shortcut icon" href="images/favicon.png">
-    <link rel="apple-touch-icon" href="images/apple-touch-icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="images/apple-touch-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="images/apple-touch-icon-114x114.png">
+    <link rel="shortcut icon" href="images/logo-fav.png">
+    <link rel="apple-touch-icon" href="images/logo-fav.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="images/logo-fav.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="images/logo-fav.png">
     <!-- animation -->
     <link rel="stylesheet" href="css/animate.css" />
     <!-- bootstrap -->
@@ -52,8 +52,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-3 col-sm-2 col-xs-6">
-                    <a class="logo-light" href="index.html"><img alt="" src="images/logo-light.png" class="logo" /></a>
-                    <a class="logo-dark" href="index.html"><img alt="" src="images/logo-light.png" class="logo" /></a>
+                    <a class="logo-light" href="index.html"><img alt="" src="images/logo-main.png" class="logo" /></a>
+                    <a class="logo-dark" href="index.html"><img alt="" src="images/logo-main.png" class="logo" /></a>
                 </div>
                 <!--change icon-->
                 <div class="navbar-header">
@@ -651,7 +651,7 @@
                     <!-- end copyright -->
                     <!-- logo -->
                     <div class="col-md-6 col-sm-6 col-xs-12 footer-logo text-right xs-text-center">
-                        <a href="index.html"><img src="images/logo-light-gray.png" alt="" /></a>
+                        <a href="index.html"><img src="images/logo-fav.png" width="25" alt="" /></a>
                     </div>
                     <!-- end logo -->
                 </div>
