feat: update color to icon

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     </nav>
     <!-- end of navigation -->
     <!-- parallax section -->
-    <section class="parallax1 parallax-fix full-screen no-padding scroll-to-down-white overlay-gray" onclick="scrollToDown()" id="slider">
+    <section class="parallax1 parallax-fix full-screen no-padding scroll-to-down-white" onclick="scrollToDown()" id="slider">
         <div class="bg-primary"></div> <img class="parallax-background-img" src="images/about-us-banner-bg.jpg" alt="" />
         <!--change-->
         <div class="container full-screen position-relative">
@@ -96,7 +96,7 @@
     </section>
     <!-- end parallax section -->
     <!-- about us section -->
-    <section id="features" class="border-bottom no-padding-bottom xs-onepage-section">
+    <section id="features" class="no-padding-bottom xs-onepage-section">
         <div class="container">
             <div class="row">
                 <!-- section title -->
@@ -135,7 +135,7 @@
                 <div class="col-md-4 col-sm-12">
                     <!-- features item -->
                     <div class="features-section col-md-12 col-sm-6 no-padding">
-                        <div class="col-md-3 col-sm-2 col-xs-2 no-padding"><i class="icon-desktop medium-icon white-text"></i></div>
+                        <div class="col-md-3 col-sm-2 col-xs-2 no-padding"><i class="icon-desktop medium-icon gray-text"></i></div>
                         <div class="col-md-9 col-sm-9 col-xs-9 no-padding text-left f-right">
                             <h5 class="margin-five no-margin-top text-skills">Unity 5</h5>
                             <p class="width-90">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been.</p>
@@ -145,7 +145,7 @@
                     <!-- end features item -->
                     <!-- features item -->
                     <div class="features-section col-md-12 col-sm-6 no-padding no-margin">
-                        <div class="col-md-3 col-sm-2 col-xs-2 no-padding"><i class="icon-tools-2 medium-icon white-text"></i></div>
+                        <div class="col-md-3 col-sm-2 col-xs-2 no-padding"><i class="icon-tools-2 medium-icon gray-text"></i></div>
                         <div class="col-md-9 col-sm-9 col-xs-9 no-padding text-left f-right">
                             <h5 class="margin-five no-margin-top text-skills">Blender</h5>
                             <p class="width-90">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been.</p>
@@ -157,7 +157,7 @@
                 <div class="col-md-4 col-sm-12">
                     <!-- features item -->
                     <div class="features-section col-md-12 col-sm-6 no-padding">
-                        <div class="col-md-3 col-sm-2 col-xs-2 no-padding"><i class="icon-tools medium-icon white-text"></i></div>
+                        <div class="col-md-3 col-sm-2 col-xs-2 no-padding"><i class="icon-tools medium-icon gray-text"></i></div>
                         <div class="col-md-9 col-sm-9 col-xs-9 no-padding text-left f-right">
                             <h5 class="margin-five no-margin-top text-skills">Unreal Engine 4</h5>
                             <p class="width-90">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been.</p>
@@ -167,7 +167,7 @@
                     <!-- end features item -->
                     <!-- features item -->
                     <div class="features-section col-md-12 col-sm-6 no-padding no-margin">
-                        <div class="col-md-3 col-sm-2 col-xs-2 no-padding"><i class="icon-pictures medium-icon white-text"></i></div>
+                        <div class="col-md-3 col-sm-2 col-xs-2 no-padding"><i class="icon-pictures medium-icon gray-text"></i></div>
                         <div class="col-md-9 col-sm-9 col-xs-9 no-padding text-left f-right">
                             <h5 class="margin-five no-margin-top text-skills">Photoshop</h5>
                             <p class="width-90">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been.</p>
@@ -179,7 +179,7 @@
                 <div class="col-md-4 col-sm-12">
                     <!-- features item -->
                     <div class="features-section col-md-12 col-sm-6 no-padding">
-                        <div class="col-md-3 col-sm-2 col-xs-2 no-padding"><i class="icon-scissors medium-icon white-text"></i></div>
+                        <div class="col-md-3 col-sm-2 col-xs-2 no-padding"><i class="icon-scissors medium-icon gray-text"></i></div>
                         <div class="col-md-9 col-sm-9 col-xs-9 no-padding text-left f-right">
                             <h5 class="margin-five no-margin-top text-skills">Illustrtor</h5>
                             <p class="width-90">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been.</p>
@@ -189,7 +189,7 @@
                     <!-- end features item -->
                     <!-- features item -->
                     <div class="features-section col-md-12 col-sm-6 no-padding no-margin">
-                        <div class="col-md-3 col-sm-2 col-xs-2 no-padding"><i class="icon-mobile medium-icon white-text"></i></div>
+                        <div class="col-md-3 col-sm-2 col-xs-2 no-padding"><i class="icon-mobile medium-icon gray-text"></i></div>
                         <div class="col-md-9 col-sm-9 col-xs-9 no-padding text-left f-right">
                             <h5 class="margin-five no-margin-top text-skills">Android</h5>
                             <p class="width-90">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been.</p>
@@ -295,7 +295,7 @@
                         <!-- education item -->
                         <div class="col-md-3 col-sm-6 sm-margin-bottom-ten">
                             <div class="education-box-main text-center">
-                                <div class="education-box"> <i class="fa fa-graduation-cap white-text"></i> <span class="year text-large gray-text display-block margin-five">2014 - 2018</span> <span class="university text-uppercase display-block green-text letter-spacing-2 font-weight-600">GGS Indraprastha University</span>
+                                <div class="education-box"> <i class="fa fa-graduation-cap gray-text"></i> <span class="year text-large gray-text display-block margin-five">2014 - 2018</span> <span class="university text-uppercase display-block green-text letter-spacing-2 font-weight-600">GGS Indraprastha University</span>
                                     <div class="separator-line bg-red margin-ten"></div>
                                 </div>
                                 <div class="namerol"><span class="text-uppercase display-block gray-text letter-spacing-2 margin-five no-margin-top">Bachelor of Technology</span>
@@ -308,7 +308,7 @@
                         <!-- education item -->
                         <div class="col-md-3 col-sm-6 sm-margin-bottom-ten">
                             <div class="education-box-main text-center">
-                                <div class="education-box"> <i class="fa fa-code white-text"></i> <span class="year text-large gray-text display-block margin-five">2016 - 2017</span> <span class="university text-uppercase display-block green-text letter-spacing-2 font-weight-600">Udacity Certified Nanodegree</span>
+                                <div class="education-box"> <i class="fa fa-code gray-text"></i> <span class="year text-large gray-text display-block margin-five">2016 - 2017</span> <span class="university text-uppercase display-block green-text letter-spacing-2 font-weight-600">Udacity Certified Nanodegree</span>
                                     <div class="separator-line bg-red margin-ten"></div>
                                 </div>
                                 <div class="namerol"><span class="text-uppercase display-block gray-text letter-spacing-2 margin-five no-margin-top">VR Development Nanodegree</span>
@@ -321,7 +321,7 @@
                         <!-- education item -->
                         <div class="col-md-3 col-sm-6 xs-margin-bottom-ten">
                             <div class="education-box-main text-center">
-                                <div class="education-box"> <i class="fa fa-university white-text"></i> <span class="year text-large gray-text display-block margin-five">2012 - 2014</span> <span class="university text-uppercase display-block green-text letter-spacing-2 font-weight-600">Guru Nanak Public School</span>
+                                <div class="education-box"> <i class="fa fa-university gray-text"></i> <span class="year text-large gray-text display-block margin-five">2012 - 2014</span> <span class="university text-uppercase display-block green-text letter-spacing-2 font-weight-600">Guru Nanak Public School</span>
                                     <div class="separator-line bg-red margin-ten"></div>
                                 </div>
                                 <div class="namerol"><span class="text-uppercase display-block gray-text letter-spacing-2 margin-five no-margin-top">Higher Secondary School</span>
@@ -335,7 +335,7 @@
                         <div class="col-md-3 col-sm-6">
                             <!--change-->
                             <div class="education-box-main text-center">
-                                <div class="education-box"> <i class="fa fa-book white-text"></i> <span class="year text-large gray-text display-block margin-five">2010  - 2012</span> <span class="university text-uppercase display-block green-text letter-spacing-2 font-weight-600">Guru Nanak Public School</span>
+                                <div class="education-box"> <i class="fa fa-book gray-text"></i> <span class="year text-large gray-text display-block margin-five">2010  - 2012</span> <span class="university text-uppercase display-block green-text letter-spacing-2 font-weight-600">Guru Nanak Public School</span>
                                     <div class="separator-line bg-red margin-ten"></div>
                                 </div>
                                 <div class="namerol"><span class="text-uppercase display-block gray-text letter-spacing-2 margin-five no-margin-top">Secondary School</span>
@@ -579,7 +579,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-5 col-sm-10 no-padding testimonial-style2 center-col text-center position-relative"> <i class="fa fa-quote-left medium-icon red-text margin-five no-margin-top"></i>
-                    <h6 class="black-text col-xs-12">"It may be that I shall find it good to get outside of my body - to cast it off like a disused garment. But I shall not cease to work! I shall inspire men everywhere, until the world shall know that it is one with God."</h6> <span class="name">- Swami Vivekanand</span> </div>
+                    <h6 class="gray-text col-xs-12" style="font-size:20px">"It may be that I shall find it good to get outside of my body - to cast it off like a disused garment. But I shall not cease to work! I shall inspire men everywhere, until the world shall know that it is one with God."</h6> <span class="name">- Swami Vivekanand</span> </div>
             </div>
         </div>
     </section>
@@ -595,12 +595,12 @@
             </div>
             <div class="row margin-ten no-margin-bottom">
                 <div class="col-md-9 text-center center-col">
-                    <div class="col-md-4 col-sm-4 text-center"><i class="icon-phone medium-icon white-text"></i>
-                        <h6 class="white-text margin-two no-margin-bottom">+91 - 9910030042</h6></div>
-                    <div class="col-md-4 col-sm-4 text-center"><i class="icon-map-pin medium-icon white-text"></i>
-                        <h6 class="white-text margin-two no-margin-bottom">New Delhi, India</h6></div>
-                    <div class="col-md-4 col-sm-4 text-center"><i class="icon-envelope medium-icon white-text"></i>
-                        <h6 class="white-text margin-two no-margin-bottom"><a class="white-text" href="mailto:no-reply@domain.com">manjogsingh@gmail.com</a></h6></div>
+                    <div class="col-md-4 col-sm-4 text-center"><i class="icon-phone medium-icon gray-text"></i>
+                        <h6 class="gray-text margin-two no-margin-bottom">+91 - 9910030042</h6></div>
+                    <div class="col-md-4 col-sm-4 text-center"><i class="icon-map-pin medium-icon gray-text"></i>
+                        <h6 class="gray-text margin-two no-margin-bottom">New Delhi, India</h6></div>
+                    <div class="col-md-4 col-sm-4 text-center"><i class="icon-envelope medium-icon gray-text"></i>
+                        <h6 class="gray-text margin-two no-margin-bottom"><a class="gray-text" href="mailto:no-reply@domain.com">manjogsingh@gmail.com</a></h6></div>
                 </div>
             </div>
             <div class="row">
