feat:projects added

--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@
                     <div class="slider-text-middle slider-text-middle2 personal-name animated fadeIn">
                         <h1 class="margin-two text-primary">I'm Manjog Singh</h1> <span class="cd-headline letters type text-uppercase">
                                 <span class="cd-words-wrapper waiting">
-                                    <b class="is-visible main-font text-large font-weight-400">I'm Game Developer</b>
-                                    <b class="main-font text-large font-weight-400">I'm dedicated freelancer</b>
-                                    <b class="main-font text-large font-weight-400">I'm AR VR Enthusiast</b>
+                                    <b class="is-visible main-font text-large font-weight-400">I'm a  Game Developer</b>
+                                    <b class="main-font text-large font-weight-400">I'm a dedicated freelancer</b>
+                                    <b class="main-font text-large font-weight-400">I'm a AR VR Enthusiast</b>
                                 </span> </span>
                     </div>
                 </div>
@@ -115,7 +115,7 @@
                             <li><span class="font-weight-600">Phone:</span> (+91) - 9910030042</li>
                             <li><span class="font-weight-600">Date of birth:</span> 02 December 1996</li>
                             <li><span class="font-weight-600">Nationality:</span> Indian</li>
-                        </ul> <a class="highlight-button-dark btn btn-medium button" href="onepage-personal.html#">Download Resume</a> </div>
+                        </ul> <a class="highlight-button-dark btn btn-medium button" href="https://bit.ly/manjogresume">Download Resume</a> </div>
                 </div>
             </div>
         </div>
@@ -138,7 +138,7 @@
                         <div class="col-md-3 col-sm-2 col-xs-2 no-padding"><i class="icon-desktop medium-icon gray-text"></i></div>
                         <div class="col-md-9 col-sm-9 col-xs-9 no-padding text-left f-right">
                             <h5 class="margin-five no-margin-top text-skills">Unity 5</h5>
-                            <p class="width-90">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been.</p>
+                            <!--p class="width-90">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been.</p>
                             <!--change-->
                         </div>
                     </div>
@@ -148,7 +148,7 @@
                         <div class="col-md-3 col-sm-2 col-xs-2 no-padding"><i class="icon-tools-2 medium-icon gray-text"></i></div>
                         <div class="col-md-9 col-sm-9 col-xs-9 no-padding text-left f-right">
                             <h5 class="margin-five no-margin-top text-skills">Blender</h5>
-                            <p class="width-90">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been.</p>
+                            <!--p class="width-90">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been.</p>
                             <!--change-->
                         </div>
                     </div>
@@ -160,7 +160,7 @@
                         <div class="col-md-3 col-sm-2 col-xs-2 no-padding"><i class="icon-tools medium-icon gray-text"></i></div>
                         <div class="col-md-9 col-sm-9 col-xs-9 no-padding text-left f-right">
                             <h5 class="margin-five no-margin-top text-skills">Unreal Engine 4</h5>
-                            <p class="width-90">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been.</p>
+                            <!--p class="width-90">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been.</p>
                             <!--change-->
                         </div>
                     </div>
@@ -170,7 +170,7 @@
                         <div class="col-md-3 col-sm-2 col-xs-2 no-padding"><i class="icon-pictures medium-icon gray-text"></i></div>
                         <div class="col-md-9 col-sm-9 col-xs-9 no-padding text-left f-right">
                             <h5 class="margin-five no-margin-top text-skills">Photoshop</h5>
-                            <p class="width-90">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been.</p>
+                            <!--p class="width-90">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been.</p>
                             <!--change-->
                         </div>
                     </div>
@@ -182,7 +182,7 @@
                         <div class="col-md-3 col-sm-2 col-xs-2 no-padding"><i class="icon-scissors medium-icon gray-text"></i></div>
                         <div class="col-md-9 col-sm-9 col-xs-9 no-padding text-left f-right">
                             <h5 class="margin-five no-margin-top text-skills">Illustrtor</h5>
-                            <p class="width-90">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been.</p>
+                            <!--p class="width-90">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been.</p>
                             <!--change-->
                         </div>
                     </div>
@@ -192,7 +192,7 @@
                         <div class="col-md-3 col-sm-2 col-xs-2 no-padding"><i class="icon-mobile medium-icon gray-text"></i></div>
                         <div class="col-md-9 col-sm-9 col-xs-9 no-padding text-left f-right">
                             <h5 class="margin-five no-margin-top text-skills">Android</h5>
-                            <p class="width-90">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been.</p>
+                            <!--p class="width-90">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been.</p>
                             <!--change-->
                         </div>
                     </div>
@@ -402,7 +402,7 @@
             <div class="row">
                 <!-- section title -->
                 <div class="col-md-12 text-center"> <span class="title-number">04</span>
-                    <h3 class="section-title no-padding">Portfolio</h3> </div>
+                    <h3 class="section-title no-padding">Projects</h3> </div>
                 <!-- end section title -->
             </div>
         </div>
@@ -426,17 +426,42 @@
                             <li class="photography graphics">
                                 <figure>
                                     <div class="gallery-img">
-                                        <a href="onepage-single-project-page1.html" class="simple-ajax-popup-align-top"><img src="images/portfolio-img57.jpg" alt=""></a>
+                                        <a href="Project-AlphaDrop.html" class="simple-ajax-popup-align-top"><img src="images/Project-AlphaDrop-1.png" alt=""></a>
                                     </div>
                                     <figcaption>
-                                        <h3><a href="onepage-single-project-page1.html" class="simple-ajax-popup-align-top">Herbal Beauty Salon</a></h3>
-                                        <p>Ajax popup - Style #1</p>
+                                        <h3><a href="Project-AlphaDrop.html" class="simple-ajax-popup-align-top">AlphaDrop</a></h3>
+                                        <p>Game</p>
+                                    </figcaption>
+                                </figure>
+                            </li>
+                               <li class="photography graphics">
+                                <figure>
+                                    <div class="gallery-img">
+                                        <a href="Project-VR-Maze.html" class="simple-ajax-popup-align-top"><img src="images/Project-VR-1.png" alt=""></a>
+                                    </div>
+                                    <figcaption>
+                                        <h3><a href="project-page1.html" class="simple-ajax-popup-align-top">VR-Maze</a></h3>
+                                        <p>Virtual Reality</p>
                                     </figcaption>
                                 </figure>
                             </li>
                             <!-- end portfolio item -->
                             <!-- portfolio item -->
-                            <li class="graphics design lightbox-gallery">
+                            <li class="photography graphics">
+                                <figure>
+                                    <div class="gallery-img">
+                                        <a href="Project-VR-Apartment.html" class="simple-ajax-popup-align-top"><img src="images/Project-VR-6.png" alt=""></a>
+                                    </div>
+                                    <figcaption>
+                                        <h3><a href="project-page1.html" class="simple-ajax-popup-align-top">VR-Apartment</a></h3>
+                                        <p>Virtual Reality</p>
+                                    </figcaption>
+                                </figure>
+                            </li>
+                            
+                            <!-- end portfolio item -->
+                            <!-- portfolio item -->
+                            <!--li class="graphics design lightbox-gallery">
                                 <figure>
                                     <div class="gallery-img">
                                         <a href="images/big-portfolio-img8.jpg" title=""><img src="images/portfolio-img59.jpg" alt=""></a>
@@ -451,62 +476,62 @@
                             </li>
                             <!-- end portfolio item -->
                             <!-- portfolio item -->
-                            <li class="branding graphics design">
+                            <!--li class="branding graphics design">
                                 <figure>
                                     <div class="gallery-img">
-                                        <a href="onepage-single-project-page3.html" class="simple-ajax-popup-align-top"><img src="images/portfolio-img60.jpg" alt=""></a>
+                                        <a href="project-page3.html" class="simple-ajax-popup-align-top"><img src="images/portfolio-img60.jpg" alt=""></a>
                                     </div>
                                     <figcaption>
-                                        <h3><a href="onepage-single-project-page3.html" class="simple-ajax-popup-align-top">Kaya Skin Care</a></h3>
+                                        <h3><a href="project-page3.html" class="simple-ajax-popup-align-top">Kaya Skin Care</a></h3>
                                         <p>Ajax popup - Style #3</p>
                                     </figcaption>
                                 </figure>
                             </li>
                             <!-- end portfolio item -->
                             <!-- portfolio item -->
-                            <li class="photography branding design graphics">
+                            <!--li class="photography branding design graphics">
                                 <figure>
                                     <div class="gallery-img">
-                                        <a href="onepage-single-project-page5.html" class="simple-ajax-popup-align-top"><img src="images/portfolio-img62.jpg" alt=""></a>
+                                        <a href="project-page5.html" class="simple-ajax-popup-align-top"><img src="images/portfolio-img62.jpg" alt=""></a>
                                     </div>
                                     <figcaption>
-                                        <h3><a href="onepage-single-project-page1.html" class="simple-ajax-popup-align-top">Rubber Studio</a></h3>
+                                        <h3><a href="project-page1.html" class="simple-ajax-popup-align-top">Rubber Studio</a></h3>
                                         <p>Ajax popup - Style #5</p>
                                     </figcaption>
                                 </figure>
                             </li>
                             <!-- end portfolio item -->
                             <!-- portfolio item -->
-                            <li class="photography design branding">
+                            <!--li class="photography design branding">
                                 <figure>
                                     <div class="gallery-img">
-                                        <a href="onepage-single-project-page2.html" class="simple-ajax-popup-align-top"><img src="images/portfolio-img58.jpg" alt=""></a>
+                                        <a href="project-page2.html" class="simple-ajax-popup-align-top"><img src="images/portfolio-img58.jpg" alt=""></a>
                                     </div>
                                     <figcaption>
-                                        <h3><a href="onepage-single-project-page2.html" class="simple-ajax-popup-align-top">Tailoring Interior </a></h3>
+                                        <h3><a href="project-page2.html" class="simple-ajax-popup-align-top">Tailoring Interior </a></h3>
                                         <p>Ajax popup - Style #2</p>
                                     </figcaption>
                                 </figure>
                             </li>
                             <!-- end portfolio item -->
                             <!-- portfolio item -->
-                            <li class="photography branding">
+                            <!--li class="photography branding">
                                 <figure>
                                     <div class="gallery-img">
-                                        <a href="onepage-single-project-page4.html" class="simple-ajax-popup-align-top"><img src="images/portfolio-img61.jpg" alt=""></a>
+                                        <a href="project-page4.html" class="simple-ajax-popup-align-top"><img src="images/portfolio-img61.jpg" alt=""></a>
                                     </div>
                                     <figcaption>
-                                        <h3><a href="onepage-single-project-page5.html" class="simple-ajax-popup-align-top">Third Eye Glasses</a></h3>
+                                        <h3><a href="project-page5.html" class="simple-ajax-popup-align-top">Third Eye Glasses</a></h3>
                                         <p>Ajax popup - Style #4</p>
                                     </figcaption>
                                 </figure>
                             </li>
                             <!-- end portfolio item -->
                             <!-- portfolio item -->
-                            <li class="photography branding design graphics">
+                            <!--li class="photography branding design graphics">
                                 <figure>
                                     <div class="gallery-img">
-                                        <a href="onepage-single-project-page5.html" class="simple-ajax-popup-align-top"><img src="images/portfolio-img63.jpg" alt=""></a>
+                                        <a href="project-page5.html" class="simple-ajax-popup-align-top"><img src="images/portfolio-img63.jpg" alt=""></a>
                                     </div>
                                     <figcaption>
                                         <h3><a href="onepage-single-project-page1.html" class="simple-ajax-popup-align-top">Rubber Studio</a></h3>
