--- a/project-page2.html
+++ b/project-page2.html
@@ -2,7 +2,7 @@
 <html class="no-js" lang="en">
      <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-        <title>H-Code | Responsive & Multi-Purpose One/Multi Page Template</title>
+        <title>Manjog | AR VR Developer</title>
     </head>
     <body>
         <div class="bg-white">
@@ -19,8 +19,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12 col-sm-12 text-center">
-                    <span class="project-subtitle">Onepage Carousel Header</span>
-                    <span class="project-title black-text">Awesome Project Title Here</span>
+                    <span class="project-subtitle">Virtual Reality</span>
+                    <span class="project-title black-text">VR-Maze</span>
                 </div>
             </div>
             <div class="row"><div class="col-md-12 col-sm-12"><div class="wide-separator-line margin-ten  no-margin-lr"></div></div></div>
