feat: color edits

--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
                                     <div class="separator-line bg-red margin-ten"></div>
                                 </div>
                                 <div class="namerol"><span class="text-uppercase display-block gray-text letter-spacing-2 margin-five no-margin-top">Bachelor of Technology</span>
-                                    <p>Lorem Ipsum is simply dummy text of the printing.</p>
+                                    <!--p>Bachelors done in Computer Science Engineering.</p>
                                     <!--change-->
                                 </div>
                             </div>
@@ -312,7 +312,7 @@
                                     <div class="separator-line bg-red margin-ten"></div>
                                 </div>
                                 <div class="namerol"><span class="text-uppercase display-block gray-text letter-spacing-2 margin-five no-margin-top">VR Development Nanodegree</span>
-                                    <p>Lorem Ipsum is simply dummy text of the printing.</p>
+                                    <!--p>Nanodegree done in VR Development.</p>
                                     <!--change-->
                                 </div>
                             </div>
@@ -325,7 +325,7 @@
                                     <div class="separator-line bg-red margin-ten"></div>
                                 </div>
                                 <div class="namerol"><span class="text-uppercase display-block gray-text letter-spacing-2 margin-five no-margin-top">Higher Secondary School</span>
-                                    <p>Lorem Ipsum is simply dummy text of the printing.</p>
+                                    <!--p>Specialization in Computer Science.</p>
                                     <!--change-->
                                 </div>
                             </div>
@@ -339,7 +339,7 @@
                                     <div class="separator-line bg-red margin-ten"></div>
                                 </div>
                                 <div class="namerol"><span class="text-uppercase display-block gray-text letter-spacing-2 margin-five no-margin-top">Secondary School</span>
-                                    <p>Lorem Ipsum is simply dummy text of the printing.</p>
+                                    <!--p>Specialisation in Science.</p-->
                                 </div>
                             </div>
                         </div>
@@ -426,7 +426,7 @@
                             <li class="photography graphics">
                                 <figure>
                                     <div class="gallery-img">
-                                        <a href="Project-AlphaDrop.html" class="simple-ajax-popup-align-top"><img src="images/Project-AlphaDrop-1.png" alt=""></a>
+                                        <a href="Project-AlphaDrop.html" class="simple-ajax-popup-align-top"><img src="images/Project-AlphaDrop-1_2.png" alt=""></a>
                                     </div>
                                     <figcaption>
                                         <h3><a href="Project-AlphaDrop.html" class="simple-ajax-popup-align-top">AlphaDrop</a></h3>
