--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <meta name="author" content="Manjog Singh">
     <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1" />
     <!-- favicon -->
-    <link rel="shortcut icon" href="images/logo-fav.png">
-    <link rel="apple-touch-icon" href="images/logo-fav.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="images/logo-fav.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="images/logo-fav.png">
+    <link rel="shortcut icon" href="images/favicon-96x96.png">
+    <link rel="apple-touch-icon" href="images/apple-icon.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="images/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="images/apple-icon-144x144.png">
     <!-- animation -->
     <link rel="stylesheet" href="css/animate.css" />
     <!-- bootstrap -->
