--- a/index.html
+++ b/index.html
@@ -630,7 +630,7 @@
             </div>
             <div class="row">
                 <!-- form -->
-                <form id="contactusform" action="javascript:void(0)" method="post">
+                <!--form id="contactusform" action="javascript:void(0)" method="post">
                     <div class="col-md-10 col-sm-12 center-col">
                         <div class="row">
                             <div class="col-md-12 col-sm-12">
