Update index.html added email address

--- a/index.html
+++ b/index.html
@@ -625,7 +625,7 @@
                     <div class="col-md-4 col-sm-4 text-center"><i class="icon-map-pin medium-icon gray-text"></i>
                         <h6 class="gray-text margin-two no-margin-bottom">New Delhi, India</h6></div>
                     <div class="col-md-4 col-sm-4 text-center"><i class="icon-envelope medium-icon gray-text"></i>
-                        <h6 class="gray-text margin-two no-margin-bottom"><a class="gray-text" href="mailto:no-reply@domain.com">manjogsingh@gmail.com</a></h6></div>
+                        <h6 class="gray-text margin-two no-margin-bottom"><a class="gray-text" href="mailto:no-reply@domain.com">hi@manjogsingh.com</a></h6></div>
                 </div>
             </div>
             <div class="row">
